Bug fixed: title section text left alignment on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ p {
         padding-top: 30px;
     }
 
-    #title {
+    #title .container-fluid {
         text-align: center;
     }
 }
